[package]
name = "tdx-quote"
description = "Parses and verifies Intel TDX quotes"
version = "0.0.2"
edition = "2021"
authors = ['Entropy Cryptography <engineering@entropy.xyz>']
license = 'AGPL-3.0-or-later'
repository = 'https://github.com/entropyxyz/tdx-quote'

[dependencies]
nom = { version = "7.1.3", default-features = false }
p256 = { version = "0.13.2", default-features = false, features = [
  "ecdsa",
  "alloc",
] }
sha2 = { version = "0.10.8", default-features = false }
x509-verify = { version = "0.4.6", features = ["x509"], optional = true }
spki = { version = "0.7.3", optional = true }
pem = { version = "3.0.4", default-features = false, optional = true }

[dev-dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }

[features]
default = ["pck"]
# Generate mock quotes for testing attestation code on non-TDX hardware
mock = []
# Parse and verify PCK certificate chains
pck = ["x509-verify", "spki", "pem"]
